# ethereum_hsm_signer

./: Cargo.toml  README.md  build.rs
proto/: SigService.proto
src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  txsigner.rs
src/commands/: start.rs  version.rs
tests/: acceptance.rs
