[package]
name = "ethereum_signer"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
abscissa_tokio = "0.5"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
yubihsm = { version = "0.32", features = ["secp256k1"] }
clarity ={git = "https://github.com/iqlusioninc/clarity", branch = "zaki-signatory" }
ecdsa = "0.4.0"
zeroize = "1.1.0"


[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.3"

